<resources>
    <string name="app_name" translatable="false">Solluz FA\nViewer</string>
    <string name="app_name_one_line" translatable="false">Solluz FA Viewer</string>
    <string name="machine_state">Machine state</string>
    <string name="machine_state_working">Working</string>
    <string name="machine_state_not_working">Stoped</string>
    <string name="passed_counts">Passed counts</string>
    <string name="failed_counts">Failed counts</string>
    <string name="total_counts">Total counts</string>
    <string name="passed_percentage">Passed percentage (%)</string>
    <string name="home_url" translatable="false">http://www.solluz-fa.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="now_monitoring">Now monitoring…</string>
    <string name="machine_list">Machine List</string>
    <string name="add_machine">Add machine</string>
    <string name="remove_machine">Remove machine</string>

    <!-- Preference -->
    <string name="solluz_preference_name" translatable="false">com.solluzfa.solluzfaviewer.pref</string>
    <string name="channel_register_pref" translatable="false">Channel_Register</string>

    <!-- Strings related to Settings -->
    <string name="pref_key_url_text" translatable="false">url_text</string>
    <string name="pref_key_company_code_text" translatable="false">company_code_text</string>
    <string name="pref_key_interval_list" translatable="false">interval_list</string>
    <string name="pref_key_push_switch" translatable="false">push_switch</string>

    <string name="pref_title_push_notification">Push notification</string>
    <string name="pref_description_push_notification">make push notification when you turn on
    </string>

    <string name="pref_title_url_address">URL address</string>
    <string name="pref_default_url_address" translatable="false">http://solluz.iptime.org/Data/</string>

    <string name="pref_title_company_code">Company code</string>
    <string name="pref_default_company_code" translatable="false">MachineData2</string>

    <string name="pref_title_select_interval">Reading interval</string>
    <string name="pref_default_reading_interval" translatable="false">1000</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="updating">Updating…</string>
    <string-array name="pref_list_reading_interval_titles">
        <item>None</item>
        <item>1 sec</item>
        <item>1 min </item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>
    <string-array name="pref_list_reading_interval_values">
        <item>0</item>
        <item>1000</item>
        <item>60000</item>
        <item>3600000</item>
        <item>10800000</item>
    </string-array>
</resources>
