<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url_address"
        android:inputType="textCapWords"
        android:key="url_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_url_address" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_company_code"
        android:inputType="textCapWords"
        android:key="company_code_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_company_code" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_reading_interval_titles"
        android:entryValues="@array/pref_list_reading_interval_values"
        android:key="interval_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_select_interval" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="push_switch"
        android:summary="@string/pref_description_push_notification"
        android:title="@string/pref_title_push_notification" />

</PreferenceScreen>
